# tooling

./: .bazelignore  .bazelrc  .bazelrc.ai_checker  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  BUILD  MODULE.bazel  README.md  REUSE.toml  defs.bzl  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
bazel/rules/rules_score/examples/integrator/: .bazelrc  BUILD  MODULE.bazel  static_design.puml
bazel/rules/rules_score/examples/integrator/bazel/toolchains/: BUILD
bazel/rules/rules_score/examples/integrator/docs/requirements/: BUILD  assumed_system_requirements.trlc  component_requirements.trlc  feature_requirements.trlc
bazel/rules/rules_score/examples/minimal/: .bazelrc  BUILD  MODULE.bazel
bazel/rules/rules_score/examples/minimal/bazel/toolchains/: BUILD
bazel/rules/rules_score/examples/minimal/docs/: class_design.puml  static_design.puml
bazel/rules/rules_score/examples/minimal/requirements/: asr.trlc  feature_requirements.trlc
bazel/rules/rules_score/examples/minimal/src/: my_unit.cpp  my_unit.h
bazel/rules/rules_score/examples/minimal/test/: my_unit_test.cpp
bazel/rules/rules_score/examples/some_other_library/: .bazelrc  BUILD  MODULE.bazel  aous.trlc  static_design.puml
bazel/rules/rules_score/examples/some_other_library/bazel/toolchains/: BUILD
bazel/rules/rules_score/test/: BUILD  MODULE.bazel  check_seooc_dep_links.sh  check_unknown_needs.sh  graphviz_render_test.py  html_generation_test.bzl  plantuml_dot_render_test.py  requirements.in  requirements.txt  requirements_image_test.bzl  requirements_rst_test.bzl  score_module_providers_test.bzl  seooc_test.bzl  test_aou_forwarding_to_lobster.py  test_fmea_assembler.py  test_safety_analysis_tools.py  trlc_rst_image_rendering_test.py  unit_component_test.bzl
bazel/rules/rules_score/test/fixtures/: dep_seooc_lib.puml  mock_lib1.cc  mock_lib2.cc  seooc_test_lib.puml  test_binary_unit_test.cc  test_component_main.cc  test_de_filegroup_arch_design.puml  test_dependable_element.puml  test_dependable_element_asr_direct.puml  test_dependable_element_nested.puml  test_unit2_test.cc  test_unit_asr_direct_test.cc  test_unit_test.cc
bazel/rules/rules_score/test/fixtures/coverage_lock_test/: coverage.lock.yaml
bazel/rules/rules_score/test/fixtures/graphviz_test/: index.rst
bazel/rules/rules_score/test/fixtures/image_requirements/: image_requirements.trlc  schema.rsl
bazel/rules/rules_score/test/fixtures/image_srcs/: BUILD
bazel/rules/rules_score/test/fixtures/module_a/: index.rst
bazel/rules/rules_score/test/fixtures/module_b/: index.rst
bazel/rules/rules_score/test/fixtures/plantuml_dot_test/: index.rst
bazel/rules/rules_score/test/fixtures/rst_requirements/: component_requirements.rst
bazel/rules/rules_score/test/fixtures/seooc_test/: asr_fixtures.trlc  assumed_system_requirements.trlc  comp_req_fixtures.trlc  component_requirements.trlc  component_requirements_direct_asr.trlc  dfa.rst  feature_requirements.trlc  safety_measures_fixtures.trlc
bazel/rules/rules_score/test/template/: conf.template.py
bazel/rules/rules_score/test/test/: BUILD  html_generation_test.bzl  seooc_test.bzl  test_safety_analysis_tools.py  unit_component_test.bzl
bazel/rules/rules_score/test/test/fixtures/: test_binary_unit_test.cc  test_unit2_test.cc  test_unit_test.cc
bazel/rules/rules_score/test/test/fixtures/seooc_test/: feat_req_fixtures.trlc
cli_helper/: README.md
coverage/: BUILD  README.md  ferrocene_report.sh  ferrocene_report_wrapper.sh.tpl  llvm_profile_wrapper.sh  run_combined_coverage.sh
cr_checker/: MODULE.bazel  README.md  cr_checker.bzl
dash/: MODULE.bazel  README.md  dash.bzl
dash/tool/formatters/: dash_format_converter.py
docs/: DR-001.md
format_checker/: MODULE.bazel  README.md  macros.bzl
gh/: BUILD  MODULE.bazel  README.md
gh/src/: BUILD  MODULE.bazel  defs.bzl  requirements.in  requirements.txt  update_schema.py
integration_tests/: BUILD  MODULE.bazel  test_file.py  test_file.yaml  test_unified_module.sh
lobster_bazel/: BUILD  README.md  lobster_bazel.bzl  parse_source_files.py  requirements.in  requirements.txt  requirements_3_11.txt  requirements_3_12.txt
lobster_bazel/test/data/: BUILD.bazel  dependency_with_tags.py  file_list.txt  source_with_tags.cpp  source_with_tags.h  source_with_tags.py  transitive_dependency_with_tags.py
manual_analysis/: BUILD  README.md  check_lock.py  check_lock_test.py  check_results.py  check_results_test.py  common.py  common_test.py  (+34 more)
pytest/: BUILD  MODULE.bazel  README.md  pytest.bzl
pytest/integration_test/: BUILD  MODULE.bazel  requirements_lock.txt
python_basics/examples/simple-python/: BUILD  MODULE.bazel  hello.py  test_hello.py
python_basics/examples/with-pip-deps/: BUILD  MODULE.bazel  requirements.txt  test_web_client.py  web_client.py
python_basics/integration_tests/simplified-setup/: BUILD  MODULE.bazel  requirements.txt  test_python_toolchain.py  test_simplified_setup.py
sbom/: BUILD.bazel  SBOM_Readme.md  crates_metadata.json  defs.bzl  extensions.bzl  npm_wrapper.sh
sbom/docs/requirements/: component_requirements.rst  feature_requirements.rst
sbom/internal/: BUILD  __init__.py  aspect.bzl  metadata_rule.bzl  providers.bzl  rules.bzl
sbom/internal/generator/: BUILD  __init__.py  cyclonedx_formatter.py  sbom_generator.py  spdx_formatter.py  utils.py
sbom/scripts/: BUILD.bazel  generate_cpp_metadata_cache.py  generate_crates_metadata_cache.py  spdx_to_github_snapshot.py
sbom/tests/: BUILD  __init__.py  test_bcr_known_licenses.py  test_cpp_enrich_checksum.py  test_cyclonedx_formatter.py  test_generate_cpp_metadata_cache.py  test_generate_crates_metadata_cache.py  test_real_sbom_integration.py  test_sbom_generator.py  test_spdx_formatter.py  test_spdx_to_github_snapshot.py
sbom/tests/fixtures/: baselibs_input.json  crates_metadata.json  kyron_cdxgen.cdx.json  kyron_input.json  orchestrator_cdxgen.cdx.json  orchestrator_input.json  sbom_metadata.json
starpls/integration_tests/: BUILD  MODULE.bazel  starpls_test.py  testfile.bzl
(+1209 files in other folders)
