# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

# ⚠️  DEPRECATED: This individual module is deprecated.
# 
# Please use the unified tooling module instead:
#   bazel_dep(name = "score_tooling", version = "1.0.0")
#
# Then load from: @score_tooling//format_checker:macros.bzl
# 
# See the root README.md for migration guidance.

module(name = "score_format_checker", version = "0.1.1")

bazel_dep(name = "aspect_rules_lint", version = "1.0.3")  
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")
