

module(
    name = "score_pytest",
    version = "0.1",
    compatibility_level = 0,
)


##############################################################################
#
# Python version
#
###############################################################################
bazel_dep(name = "rules_python", version = "1.0.0")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

###############################################################################
#
# docs dependencies (Sphinx)
#
###############################################################################
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_sphinx",
    python_version = PYTHON_VERSION,
    requirements_lock = "requirements_lock.txt",
)
use_repo(pip, "pip_sphinx")

###############################################################################
#
# Generic linting and formatting rules
#
###############################################################################
bazel_dep(name = "aspect_rules_py", version = "1.0.0")
