# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//sbom:__subpackages__"])

exports_files([
    "generate_crates_metadata_cache.py",
])

py_library(
    name = "generate_crates_metadata_cache",
    srcs = ["generate_crates_metadata_cache.py"],
)

py_library(
    name = "generate_cpp_metadata_cache",
    srcs = ["generate_cpp_metadata_cache.py"],
)

py_library(
    name = "spdx_to_github_snapshot",
    srcs = ["spdx_to_github_snapshot.py"],
)
