

bazel_dep(name = "rules_python", version = "1.0.0")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = PYTHON_VERSION,
)
use_repo(python)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_score_starpls",
    python_version = PYTHON_VERSION,
    requirements_lock = "requirements_lock.txt",
)
use_repo(pip, "pip_score_starpls")

###############################################################################
#
# Generic linting and formatting rules
#
###############################################################################
bazel_dep(name = "aspect_rules_py", version = "1.0.0")

bazel_dep(name = "score_starpls", version = "0.1.0") 

local_path_override(
    module_name = "score_starpls",
    path = "../"
)
