# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_starpls_lsp",
    version = "0.1.0",
    compatibility_level = 0,
)

bazel_dep(name = "rules_shell", version = "0.5.0")

# begin Integration Tests

# PYTHON
bazel_dep(name = "rules_python", version = "1.4.1")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = PYTHON_VERSION,
)
use_repo(python)

# PIP
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_deps_test",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip_deps_test")

bazel_dep(name = "score_tooling", version = "0.0.0")
local_path_override(
    module_name = "score_tooling",
    path = "../../",
)

bazel_dep(name = "trlc", version = "0.0.0")
git_override(
    module_name = "trlc",
    commit = "1872957ae981ae632a0ec6eafb5b8d3aa44bdb86",
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

bazel_dep(name = "lobster", version = "0.0.0")
git_override(
    module_name = "lobster",
    commit = "94ed5961ca28ee1b840cd8a938138c17ae4da671",
    remote = "https://github.com/bmw-software-engineering/lobster.git",
)

# end Integration Tests
