# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "rules_score_test",
    version = "0.0.0",
    compatibility_level = 1,
)

###############################################################################
# Core Dependencies
###############################################################################
bazel_dep(name = "download_utils", version = "1.2.2")
git_override(
    module_name = "download_utils",
    commit = "3b96912fb6622dda83f25efd1f8ae596fc4a63a6",
    remote = "https://gitlab.arm.com/bazel/download_utils.git",
)

bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "aspect_rules_py", version = "1.4.0")
bazel_dep(name = "aspect_rules_lint", version = "1.5.3")
bazel_dep(name = "rules_shell", version = "0.5.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "1.0.0")

###############################################################################
# Python Toolchain
###############################################################################
PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

###############################################################################
# Pip Hub
###############################################################################
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# Main tooling pip
pip.parse(
    envsubst = ["PIP_INDEX_URL"],
    extra_pip_args = ["--index-url=${PIP_INDEX_URL:-https://pypi.org/simple/}"],
    hub_name = "pip_tooling_test",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip_tooling_test")

bazel_dep(name = "score_docs_as_code", version = "3.0.1", dev_dependency = True)

bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
# bazel_dep(name = "score_platform", version = "0.5.0")
# bazel_dep(name = "score_process", version = "1.3.2")

bazel_dep(name = "score_tooling", version = "1.3.2")
local_path_override(
    module_name = "score_tooling",
    path = "../../../..",
)

register_toolchains(
    "//:score_toolchain",
)

###############################################################################
# LLVM Toolchain (provides libclang for the score libclang toolchain below)
#
# As an integrating repository, this module supplies its own libclang/C++
# toolchain instead of relying on score_tooling's (score_tooling declares LLVM
# only as a dev dependency and does not register a libclang toolchain for
# consumers).
###############################################################################
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
)
llvm.toolchain(
    cxx_standard = {"": "c++17"},
    llvm_version = "19.1.7",
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains(
    "//:test_libclang_toolchain",
    "@llvm_toolchain//:all",
)

bazel_dep(name = "trlc", version = "0.0.0")
git_override(
    module_name = "trlc",
    commit = "8d25f639ff44976893d7866ba421a04db5698ebe",
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

bazel_dep(name = "lobster", version = "0.0.0")
git_override(
    module_name = "lobster",
    commit = "2792e2daee2cf524fdc7b1545fd3537791ebc36c",
    remote = "https://github.com/bmw-software-engineering/lobster.git",
)

bazel_dep(name = "rules_distroless", version = "0.9.0")
git_override(
    module_name = "rules_distroless",
    commit = "dbf25be1c3a9a1698511a4817582efe61dc5ec15",
    remote = "https://github.com/LittleHuba/rules_distroless.git",
)
