# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "some_other_library",
    version = "0.0.0",
)

# S-Core Tooling
bazel_dep(name = "score_tooling", version = "0.0.0")
local_path_override(
    module_name = "score_tooling",
    path = "../../../../../",
)

# Some other llvm toolchain
bazel_dep(name = "toolchains_llvm", version = "1.6.0", dev_dependency = True)

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)
llvm.toolchain(llvm_version = "19.1.7")
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

bazel_dep(name = "trlc", version = "3.0.0")
